Creating filters to add correlation id for trazability and adding observability configs

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,7 @@ eureka.client.service-url.defaultZone=
 logging.level.root=info
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=info
 logging.level.org.springframework.cloud.gateway=trace
-server.port=
+server.port=10095
 management.endpoints.web.exposure.include=*
 spring.sleuth.sampler.probability=1.0
 spring.zipkin.baseUrl=
