--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+.run
+application-*.properties
+
+LOG_DIRECTORY_IS_UNDEFINED
 
 ### STS ###
 .apt_generated
