--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,11 @@ plugins {
 }
 
 group = 'com.decamp-learning'
-version = '0.0.1-SNAPSHOT'
+version = '1.0'
 sourceCompatibility = '11'
+
+description = 'This forward all the client calls to microservices'
+
 
 repositories {
 	mavenCentral()
@@ -17,12 +20,37 @@ ext {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+	implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
+
 }
+
+def getCommitInfo = { ->
+	def stdout = new ByteArrayOutputStream()
+	exec {
+		commandLine 'git', 'rev-parse', '--short', 'HEAD'
+		standardOutput = stdout
+	}
+	return stdout.toString().trim()
+}
+
+ext.commitInfo = getCommitInfo()
+
+
+processResources{
+	filesMatching('bootstrap.yml') {
+		expand(project.properties)
+	}
+}
+
+compileJava.dependsOn(processResources)
 
 dependencyManagement {
 	imports {
