Optimizing dockerfile by using cache feature

--- a/build.gradle
+++ b/build.gradle
@@ -19,18 +19,21 @@ ext {
 	set('springCloudVersion', "2021.0.4")
 }
 
+jar {
+	enabled = false
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
-
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 def getCommitInfo = { ->
@@ -42,8 +45,7 @@ def getCommitInfo = { ->
 	return stdout.toString().trim()
 }
 
-ext.commitInfo = getCommitInfo()
-
+ext.commitInfo = property('commitArgument')
 
 processResources{
 	filesMatching('bootstrap.yml') {
